[TECH] Uploading and storing documents into Azure Storage service
