# src/main/java/com/azure/monitoring/infrastructure/webadapter/StorageMapper.java
@@ -1,0 +1,12 @@
+package com.azure.monitoring.infrastructure.webadapter;
+
+
+import com.azure.monitoring.domain.UploadResponseMessage;
+import com.azure.monitoring.model.UploadResponse;
+import org.mapstruct.Mapper;
+
+@Mapper(componentModel = "spring")
+public interface StorageMapper {
+
+    UploadResponse map(UploadResponseMessage upload);
+}
